--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   background-image: linear-gradient(180deg, #f6f5f4 63%, #f8f7f6 100%);
   font-family: "Poppins", sans-serif;
