--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,12 @@
+html,body{
+    overflow-x: hidden;
+}
+
 body{
     background-image: linear-gradient(180deg,#f6f5f4 63%,#f8f7f6 100%);
 font-family: 'Poppins', sans-serif;
 font-weight: 300;
+
 }
 h2 {
     font-size: 24px;
