--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
 p {
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+ahover {
+  text-decoration: underline;
 }
 
 body {
@@ -18,6 +26,10 @@ h2 {
   font-size: 24px;
   font-weight: 600;
   color: #212121;
+}
+
+.section_navbar {
+  border-bottom: 1px solid #EAEEF3;
 }
 
 .container-banner {
@@ -288,14 +300,16 @@ h2 {
   background: #fad6d6;
   color: #da3838;
 }
-.section-detail-carousel .st-inexclude .exclude li, .section-detail-carousel .st-inexclude .include li {
+.section-detail-carousel .st-inexclude .exclude li,
+.section-detail-carousel .st-inexclude .include li {
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
   color: #727272;
   margin-bottom: 16px;
 }
-.section-detail-carousel .st-inexclude .exclude svg, .section-detail-carousel .st-inexclude .include svg {
+.section-detail-carousel .st-inexclude .exclude svg,
+.section-detail-carousel .st-inexclude .include svg {
   margin-right: 10px;
 }
 
@@ -305,6 +319,154 @@ h2 {
   box-sizing: border-box;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.05);
   border-radius: 20px;
+}
+
+.section-checkout .st-breadcrumb {
+  padding: 20px 0;
+  border-bottom: 1px solid #EAEEF3;
+}
+.section-checkout .st-breadcrumb ul {
+  list-style: none;
+  display: block;
+  width: 100%;
+  margin-bottom: 0;
+  padding-left: 0;
+  background: #fff;
+}
+.section-checkout .st-breadcrumb ul li {
+  position: relative;
+  display: inline-block;
+  padding-left: 20px;
+  padding-right: 20px;
+  z-index: 0;
+}
+.section-checkout .form-boking .title {
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 36px;
+  color: #232323;
+}
+.section-checkout .cart-info {
+  border: 1px solid #dedede;
+  box-sizing: border-box;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.05);
+  border-radius: 20px;
+  padding: 30px 24px;
+}
+.section-checkout .cart-info .service-section {
+  padding: 0;
+  border-bottom: 0;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.section-checkout .cart-info .service-section .service-left {
+  margin-right: 20px;
+}
+.section-checkout .cart-info .service-section .service-left img {
+  border-radius: 16px;
+  width: 100px;
+  overflow: hidden;
+  height: 100px;
+}
+.section-checkout .cart-info .service-section .service-right .title {
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 26px;
+  margin-bottom: 8px;
+  display: inline-block;
+  width: 100%;
+}
+.section-checkout .cart-info .service-section .service-right a {
+  color: #232323;
+}
+.section-checkout .cart-info .service-section .service-right .address {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #727272;
+  margin-bottom: 0;
+}
+.section-checkout .cart-info .info-section {
+  padding: 0;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #eaeef3;
+}
+.section-checkout .cart-info .info-section ul {
+  padding: 0;
+  margin: 0;
+}
+.section-checkout .cart-info .info-section ul li {
+  list-style: none;
+  font-size: 14px;
+  margin-bottom: 13px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.section-checkout .cart-info .info-section ul li .label {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #727272;
+  width: auto;
+}
+.section-checkout .cart-info .info-section ul li .value {
+  width: auto;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #232323;
+  display: flex;
+  align-items: center;
+}
+.section-checkout .cart-info .coupon-section {
+  padding: 0 0 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #eaeef3;
+}
+.section-checkout .cart-info .coupon-section form input[type=text] {
+  background: #f7f8fa;
+  border: 1px solid #dedede;
+  border-radius: 40px;
+  padding: 11px 20px;
+}
+.section-checkout .cart-info .coupon-section .btn {
+  width: 30%;
+  background: #5191FA;
+  border-radius: 3px;
+  padding: 10px;
+  float: right;
+  font-size: 14px;
+  border-radius: 40px !important;
+}
+.section-checkout .cart-info .total-section ul {
+  padding: 0;
+}
+.section-checkout .cart-info .total-section ul li {
+  list-style: none;
+  display: flex;
+  font-size: 14px;
+  margin-bottom: 13px;
+  justify-content: space-between;
+}
+.section-checkout .cart-info .total-section ul li.payment-amount {
+  border-top: 1px solid #eaeef3;
+  padding-top: 20px;
+  margin-top: 20px;
+}
+.section-checkout .cart-info .total-section ul li.payment-amount .label {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
+}
+.section-checkout .cart-info .total-section ul li.payment-amount .value {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
 }
 
 @media screen and (min-width: 992px) {
@@ -321,5 +483,8 @@ h2 {
   }
   .section-detail-carousel .carousel-item img {
     height: 350px;
+  }
+  .section-checkout .row.parent_layout {
+    flex-direction: column-reverse;
   }
 }/*# sourceMappingURL=style.css.map */
