--- a/style.scss
+++ b/style.scss
@@ -1,26 +1,41 @@
-html,body{
-    overflow-x: hidden ;
+html,
+body {
+    overflow-x: hidden;
 }
-p{
+
+p {
     margin: 0;
     padding: 0;
 }
 
-body{
-    margin:0 ;
+
+a{
+    text-decoration: none;
+
+    &hover{
+        text-decoration: underline;
+    }
+}
+body {
+    margin: 0;
     padding: 0;
-    
-font-family: 'Poppins', sans-serif;
-font-weight: 300;
+
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
 
 }
+
 h2 {
     font-size: 24px;
     font-weight: 600;
     color: #212121;
 }
 
-.container-banner{
+.section_navbar {
+    border-bottom: 1px solid #EAEEF3;
+}
+
+.container-banner {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,58 +49,67 @@ h2 {
 
 // SECTION SEARCH BOX 
 .section-search-box {
-background-color: white;
-    .search-box{
-            margin-top: -15px;
-    padding: 0;
-    border-radius: 3px;
-    box-shadow: 0 2px 4px 0 hsla(0,0%,62.4%,.5);
-    border: 1px solid #dfdfdf;
-    background-color: #fff;
-    z-index: 5;
-    font-weight: 700;
-    font-size: 16px;
+    background-color: white;
+
+    .search-box {
+        margin-top: -15px;
+        padding: 0;
+        border-radius: 3px;
+        box-shadow: 0 2px 4px 0 hsla(0, 0%, 62.4%, .5);
+        border: 1px solid #dfdfdf;
+        background-color: #fff;
+        z-index: 5;
+        font-weight: 700;
+        font-size: 16px;
     }
 
-    .nav-link:active{
-     color: #495057;
-    background-color: #fff;
-    border-color: #dee2e6 #dee2e6 #fff;
+    .nav-link:active {
+        color: #495057;
+        background-color: #fff;
+        border-color: #dee2e6 #dee2e6 #fff;
     }
-    .nav-link{
+
+    .nav-link {
         margin-top: 5px;
-                padding: 20px 20px 15px;
-    color: #212121;
-    position: relative;
-    // border: none;
-    font-size: 14px;
+        padding: 20px 20px 15px;
+        color: #212121;
+        position: relative;
+        // border: none;
+        font-size: 14px;
     }
 
     .nav-tabs {
-            padding: 0 20px;
-    border-bottom: 1px solid #eee;
+        padding: 0 20px;
+        border-bottom: 1px solid #eee;
     }
+
     .tab-pane {
         padding: 0 20px;
-.btn {
-    width: 100% ;
-}
-        .form-control{
-width: 100%;
+
+        .btn {
+            width: 100%;
+        }
+
+        .form-control {
+            width: 100%;
         }
     }
-    
+
 }
-.welcome-text{
+
+.welcome-text {
     width: 250px;
     color: #fff;
-    .text-1{   
+
+    .text-1 {
         font-size: 17px;
         font-weight: 700;
     }
-    .text-3{
+
+    .text-3 {
         font-weight: 500;
-        a{
+
+        a {
             text-decoration: none;
             font-weight: 700;
             color: #fff;
@@ -98,77 +122,82 @@ width: 100%;
     padding: 25px 0;
     background-color: #303f9f;
 
-    .subscribe-text{
+    .subscribe-text {
         width: 400px;
         color: #fff;
     }
-.input-subscribe{
-    border-radius: 5px 0 0 5px;
-}
-.input-group-append{
-    border-radius: 0 5px 5px 0;
-    background-color: #c62828;
-    padding: 5px 30px;
 
-    .btn-subscribe{
-        color: #fff;
-        font-weight: 700;
-        font-size: 14px;
-        letter-spacing: 1;
+    .input-subscribe {
+        border-radius: 5px 0 0 5px;
     }
-}
-.input-group{
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
-    width: 100%;
-}
+
+    .input-group-append {
+        border-radius: 0 5px 5px 0;
+        background-color: #c62828;
+        padding: 5px 30px;
+
+        .btn-subscribe {
+            color: #fff;
+            font-weight: 700;
+            font-size: 14px;
+            letter-spacing: 1;
+        }
+    }
+
+    .input-group {
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: stretch;
+        width: 100%;
+    }
 
 }
 
 
 // SECTION OUR PARTNER 
-.section-our-partner{
+.section-our-partner {
 
-    .title{
-            margin-bottom: 20px;
+    .title {
+        margin-bottom: 20px;
     }
-    .sub-title{
-            max-width: 300px;
-    font-size: 16px;
-    font-weight: 400;
-    color: #212121;
+
+    .sub-title {
+        max-width: 300px;
+        font-size: 16px;
+        font-weight: 400;
+        color: #212121;
     }
 
     .image-partner {
-        a{
-                          
-        img{
-            width: 159px;
-            height: 65px;
+        a {
 
-     
-        }
+            img {
+                width: 159px;
+                height: 65px;
+
+
+            }
         }
     }
 }
 
 
 // SECTION KENAPA KAMI 
-.section-kenapa-kami{
-    img{
+.section-kenapa-kami {
+    img {
         display: block;
         margin: 20px 0;
         height: 150px;
     }
-    h6{
+
+    h6 {
         font-size: 16px;
         color: #212121;
         font-weight: 600;
     }
 
-    p{
+    p {
         margin-top: 15px;
         font-size: 14px;
         line-height: 1.5;
@@ -181,216 +210,417 @@ width: 100%;
 .section-footer-sitemap {
     margin-bottom: 50px;
     font-size: 14px;
-nav  {
-    margin-top: .75rem;
-a {
-    display: block;
-    color: #212121;
-    padding: .25rem 0;
-    font-size: 16px;
-    text-decoration: none;
-    &:hover{
-        text-decoration: underline;
-    }
-}
-img {
-    margin-right: .5rem;
-}
-}
 
-.label-footer  b{
-    font-weight: bold;
-}
+    nav {
+        margin-top: .75rem;
+
+        a {
+            display: block;
+            color: #212121;
+            padding: .25rem 0;
+            font-size: 16px;
+            text-decoration: none;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+
+        img {
+            margin-right: .5rem;
+        }
+    }
+
+    .label-footer b {
+        font-weight: bold;
+    }
+
     .sitemap-contact label {
         display: block;
         margin: 0 0 0.75rem;
         color: #777;
         font-weight: 500;
     }
-    .sitemap-contact img{
+
+    .sitemap-contact img {
         margin-right: .75rem;
     }
+
     .sitemap-contact a {
         color: #000;
         font-weight: 700;
         text-decoration: none;
     }
+
     .sitemap-contact .nav-item {
         margin-top: .75rem;
     }
 }
 
-.section-hasil-search{
+.section-hasil-search {
 
 
-    .price-mulai-dari{
+    .price-mulai-dari {
         text-align: right;
     }
-    .product-price_currency{
+
+    .product-price_currency {
         text-align: right;
         font-weight: 700;
         font-size: 16px;
         color: #dd2c00;
     }
-    .card{
-        .card-title{
+
+    .card {
+        .card-title {
             margin-bottom: 0px;
         }
-        p{
+
+        p {
             font-size: 16px;
         }
     }
 }
 
-.st-hr.large{
+.st-hr.large {
     margin-top: 40px;
     margin-bottom: 40px;
 }
-.st-hr{
-        width: 100%;
+
+.st-hr {
+    width: 100%;
     height: 1px;
-    background: var(--light-grey-color,#EAEEF3);
+    background: var(--light-grey-color, #EAEEF3);
     margin-top: 30px;
     margin-bottom: 30px;
 }
+
 // DETAIL PRODUK
 .section-detail-carousel {
 
     .carousel-item {
-        img{
+        img {
 
-    height: 450px;
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px;
+            height: 450px;
+            background-size: cover;
+            background-position: center;
+            border-radius: 10px;
         }
     }
-    .icon{    background: #fff;
+
+    .icon {
+        background: #fff;
+        border: 1px solid #dedede;
+        box-sizing: border-box;
+        border-radius: 10px;
+        padding: 12px;
+        width: 48px;
+        height: 48px;
+        margin-right: 15px;
+
+        svg {
+            font-size: 21px;
+            color: #727272;
+        }
+    }
+
+    .st-description {
+        h2 {
+
+            font-weight: 700;
+            font-size: 36px;
+            line-height: 46px;
+            color: #232323;
+        }
+
+        p {
+            font-size: 16px;
+            line-height: 26px;
+            color: #727272;
+        }
+    }
+
+    .st-highlight {
+        h2 {
+            font-weight: 700;
+            font-size: 26px;
+            line-height: 36px;
+            color: #232323;
+            margin-bottom: 20px;
+        }
+
+        ul {
+            li {
+                font-size: 14px;
+                color: #5E6D77;
+                margin-bottom: 20px;
+                list-style: none;
+
+                &::before {
+                    content: "";
+                    border: 1px solid #5191FA;
+                    width: 8px;
+                    height: 8px;
+                    display: inline-block;
+                    border-radius: 50%;
+                    margin-right: 20px;
+                }
+            }
+        }
+    }
+
+    .st-inexclude {
+        h2 {
+            font-weight: 700;
+            font-size: 26px;
+            line-height: 36px;
+            color: #232323;
+            margin-bottom: 20px;
+        }
+
+        .include {
+            svg {
+                background: #cef2e5;
+                color: #10ac58;
+            }
+        }
+
+        .exclude {
+            svg {
+                background: #fad6d6;
+                color: #da3838;
+            }
+        }
+
+        .exclude,
+        .include {
+            li {
+
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 26px;
+                color: #727272;
+                margin-bottom: 16px;
+            }
+
+            svg {
+                margin-right: 10px;
+
+            }
+        }
+    }
+}
+
+.form-book-wrapper {
+    padding: 30px 0;
     border: 1px solid #dedede;
     box-sizing: border-box;
-    border-radius: 10px;
-    padding: 12px;
-    width: 48px;
-    height: 48px;
-    margin-right: 15px;
-
-    svg{
-            font-size: 21px;
-    color: #727272;
-    }
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .08), 0 4px 12px rgba(0, 0, 0, .05);
+    border-radius: 20px;
 }
 
-.st-description{
-    h2{
+.section-checkout {
 
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 46px;
-        color: #232323;
+
+    .st-breadcrumb {
+        padding: 20px 0;
+        border-bottom: 1px solid #EAEEF3;
+
+        ul {
+
+            list-style: none;
+            display: block;
+            width: 100%;
+            margin-bottom: 0;
+            padding-left: 0;
+            background: #fff;
+
+            li {
+                position: relative;
+                display: inline-block;
+                padding-left: 20px;
+                padding-right: 20px;
+                z-index: 0;
+            }
+        }
     }
-    p{
-            font-size: 16px;
-    line-height: 26px;
-    color: #727272;
-    }
-}
-.st-highlight{
-    h2{
+
+    .form-boking {
+        .title {
             font-weight: 700;
-    font-size: 26px;
-    line-height: 36px;
-    color: #232323;
-    margin-bottom: 20px;
-    }
-    ul {
-        li{
-                font-size: 14px;
-    color: #5E6D77;
-    margin-bottom: 20px;
-    list-style: none;
-
-    &::before{
-            content: "";
-    border: 1px solid #5191FA;
-    width: 8px;
-    height: 8px;
-    display: inline-block;
-    border-radius: 50%;
-    margin-right: 20px;
-    }
+            font-size: 26px;
+            line-height: 36px;
+            color: #232323;
         }
     }
+
+    .cart-info {
+        border: 1px solid #dedede;
+        box-sizing: border-box;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, .08), 0 4px 12px rgba(0, 0, 0, .05);
+        border-radius: 20px;
+        padding: 30px 24px;
+
+        .service-section {
+            padding: 0;
+            border-bottom: 0;
+            justify-content: space-between;
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            .service-left{
+          
+                margin-right: 20px;
+                img{
+                    border-radius: 16px;
+                    width: 100px;
+                    overflow: hidden;
+                    height: 100px;
+                }
+            }
+            .service-right{
+                .title{
+
+                    font-weight: 700;
+                    font-size: 17px;
+                    line-height: 26px;
+                    margin-bottom: 8px;
+                    display: inline-block;
+                    width: 100%;
+                }
+                a{
+                    color: #232323;
+                }
+.address{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    color: #727272;
+    margin-bottom: 0;
 }
-
-.st-inexclude{
-    h2{
-            font-weight: 700;
-    font-size: 26px;
-    line-height: 36px;
-    color: #232323;
-    margin-bottom: 20px;
-    }
-    .include{
-        svg{
-                   background: #cef2e5;
-    color: #10ac58;
+            }
         }
-    }
 
-    .exclude{
-        svg{
-                background: #fad6d6;
-    color: #da3838;
-        }
-    }
-    .exclude,.include{
-        li{
+        .info-section{
+            padding: 0;
+            margin-bottom: 20px;
+            border-bottom: 1px solid #eaeef3;
 
+            ul{
+                    padding: 0;
+    margin: 0;
+    li{
+        list-style: none;
+        font-size: 14px;
+        margin-bottom: 13px;
+        overflow: hidden;
+         display: flex;
+            align-items: center;
+            justify-content: space-between;
+        .label{
             font-weight: 400;
             font-size: 16px;
             line-height: 26px;
             color: #727272;
-            margin-bottom: 16px;
+            width: auto;
+        }
+        .value{
+            width: auto;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 26px;
+            color: #232323;
+            display: flex;
+            align-items: center;
+
+          
+        }
+    }
+            }
         }
 
-        svg{
-            margin-right: 10px;
-         
+        .coupon-section{
+            padding: 0 0 20px;
+            margin-bottom: 20px;
+            border-bottom: 1px solid #eaeef3;
+            form input[type='text'] {
+                background: #f7f8fa;
+                border: 1px solid #dedede;
+                border-radius: 40px;
+                padding: 11px 20px;
+            }
+
+            .btn{
+                width: 30%;
+                background: #5191FA;
+                border-radius: 3px;
+                padding: 10px;
+                float: right;
+                font-size: 14px;
+                border-radius: 40px!important;
+            }
+        }
+        .total-section{
+            ul {
+                padding: 0;
+                li{
+
+                    list-style: none;
+                    display: flex;
+                    font-size: 14px;
+                    margin-bottom: 13px;
+                    justify-content: space-between;
+                }
+                li.payment-amount{
+                    border-top: 1px solid #eaeef3;
+                    padding-top: 20px;
+                    margin-top: 20px;
+
+                    .label{
+                        font-weight: 700;
+                        font-size: 18px;
+                        line-height: 26px;
+                    }
+                    .value{    font-weight: 700;
+                        font-size: 18px;
+                        line-height: 26px;}
+                }
+            }
         }
     }
 }
-}
 
-.form-book-wrapper
-{
-    padding: 30px 0;
-    border: 1px solid #dedede;
-    box-sizing: border-box;
-    box-shadow: 0 1px 2px rgba(0,0,0,.08),0 4px 12px rgba(0,0,0,.05);
-    border-radius: 20px;
-}
+@media screen and (min-width: 992px) {
+    .section-footer-sitemap {
 
-@media screen and (min-width: 992px){
-.section-footer-sitemap{
-
-    .col-lg-3{
-        width: 22% !important;
+        .col-lg-3 {
+            width: 22% !important;
+        }
     }
-} 
-    
+
 }
 
 
 
-@media screen  and (max-width: 552px){
-    .section-detail-carousel .st-description p{
+@media screen and (max-width: 552px) {
+    .section-detail-carousel .st-description p {
         font-size: 14px;
     }
-ul{
-    padding: 0;
-}
-    .section-detail-carousel .carousel-item img{
+
+    ul {
+        padding: 0;
+    }
+
+    .section-detail-carousel .carousel-item img {
         height: 350px;
-    }    
-    
+    }
+
+    .section-checkout{
+        .row.parent_layout{
+            flex-direction: column-reverse;
+        }
+    }
+
 }
