--- a/style.scss
+++ b/style.scss
@@ -592,6 +592,13 @@ h2 {
     }
 }
 
+
+.success_booking {
+    h6{
+        font-size: 18px;
+        color: gray;
+    }
+}
 @media screen and (min-width: 992px) {
     .section-footer-sitemap {
 
