--- a/stylev2.css
+++ b/stylev2.css
@@ -189,3 +189,220 @@ opacity: 0.6;
 
 
 }
+
+
+/*
+Gallery Area Style
+======================================================*/
+.gallery-area {
+    background-image: url(../../assets/img/gallery/gallery-bg.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+    padding-bottom: 70px;
+    padding-top: 100px;
+  }
+  
+  .gallery-area::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #f9fafb;
+    opacity: 0.9;
+  }
+  
+  .gallery-area::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 400px;
+    height: 100%;
+    background-color: #ffffff;
+    z-index: -1;
+  }
+  
+  .gallery-area .gallery-shape-1 {
+    position: absolute;
+    top: 0;
+    right: 190px;
+  }
+  
+  .gallery-area .gallery-shape-2 {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
+  
+  .gallery-area .owl-nav {
+    margin-top: 0;
+    text-align: center;
+    margin-right: 0;
+  }
+  
+  .gallery-area .owl-nav .owl-prev i {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border: 1px solid #8b8c90;
+    display: inline-block;
+    font-size: 20px;
+    border-radius: 50%;
+    color: #ff8c00;
+    -webkit-transition: all ease 0.5s;
+    transition: all ease 0.5s;
+  }
+  
+  .gallery-area .owl-nav .owl-prev:hover i {
+    background-color: #ff8c00;
+    color: #ffffff;
+    border-color: #ff8c00;
+  }
+  
+  .gallery-area .owl-nav .owl-next i {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border: 1px solid #8b8c90;
+    display: inline-block;
+    font-size: 20px;
+    border-radius: 50%;
+    color: #ff8c00;
+    -webkit-transition: all ease 0.5s;
+    transition: all ease 0.5s;
+  }
+  
+  .gallery-area .owl-nav .owl-next:hover i {
+    background-color: #ff8c00;
+    color: #ffffff;
+    border-color: #ff8c00;
+  }
+  
+  .gallery-area .owl-nav [class*=owl-] {
+    margin: 0 5px;
+  }
+  
+  .gallery-area .owl-nav [class*=owl-]:hover {
+    background-color: transparent;
+  }
+  
+  .gallery-area.gallery-area-three {
+    background-image: none;
+    overflow: hidden;
+    z-index: 1;
+  }
+  
+  .gallery-area.gallery-area-three .container-fluid {
+    max-width: 1335px;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: 0;
+  }
+  
+  .gallery-area.gallery-area-three::before {
+    background-color: #1569ae;
+    width: 1200px;
+    z-index: -1;
+  }
+  
+  .gallery-area.gallery-area-three::after {
+    display: none;
+  }
+  
+  .gallery-area.gallery-area-three .owl-nav {
+    margin-right: 30px;
+  }
+  
+  .gallery-area.gallery-area-three .gallery-shape-3 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.1;
+    z-index: -1;
+  }
+  
+  .single-gallery {
+    position: relative;
+    margin-bottom: 30px;
+    -webkit-transition: all ease 0.5s;
+    transition: all ease 0.5s;
+  }
+  
+  .single-gallery .view-gallery {
+    background-color: rgba(255, 186, 10, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 18px;
+    -webkit-transition: all ease 0.5s;
+    transition: all ease 0.5s;
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  
+  .single-gallery .view-gallery i {
+    font-size: 40px;
+  }
+  
+  .single-gallery:hover {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  
+  .single-gallery:hover .view-gallery {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+  
+  .shorting .mix {
+    display: none;
+  }
+  
+  .shorting-menu {
+    text-align: center;
+    margin-bottom: 30px;
+    background-color: #f9f9f9;
+    padding: 15px 30px;
+  }
+  
+  .shorting-menu button.filter {
+    background-color: transparent;
+    font-size: 18px;
+    color: #201f25;
+    padding: 0 15px;
+  }
+  
+  .shorting-menu button.filter.active {
+    color: #ff8c00;
+  }
+  .section-title h2 {
+    color: white;
+    font-size: 40px;
+    margin-bottom: 15px; 
+    position: relative;
+  }
+
+  .section-title span {
+    font-size: 16px;
+    display: block;
+    margin-bottom: 15px;
+    color: #ff8c00;
+  }
