--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h2 {
   margin-top: -15px;
   padding: 0;
   border-radius: 3px;
-  box-shadow: 0 2px 4px 0 hsla(0deg, 0%, 62.4%, 0.5);
+  box-shadow: 0 2px 4px 0 hsla(0, 0%, 62.4%, 0.5);
   border: 1px solid #dfdfdf;
   background-color: #fff;
   z-index: 5;
